--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body style="font-family: Arial, sans-serif; margin:0; padding:0;">
 
   <header style="background:#0b5ed7; color:white; padding:20px; text-align:center;">
-    <h1>Shree Radha Krishna Inter College</h1>
-    <p>Official School Website</p>
+  <img src="logo.png" alt="School Logo" style="height:80px;"><br>
+  <h1>Shree Radha Krishna Inter College</h1>
+  <p>Official School Website</p>
   </header>
 
   <section style="padding:20px;">
