--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 </head>
 <body style="font-family: Arial, sans-serif; margin:0; padding:0;">
 
-  <header style="background:#0b5ed7; color:white; padding:20px; text-align:center;">
-  <img src="logo.png" alt="School Logo" style="height:80px;"><br>
-  <h1>Shree Radha Krishna Inter College</h1>
-  <p>Official School Website</p>
+  <header style="background:#0b5ed7; color:white; padding:15px 25px; display:flex; align-items:center;">
+  
+  <!-- Logo -->
+  <img src="logo.png" alt="School Logo"
+       style="height:70px; width:70px; border-radius:50%; background:white; padding:5px; margin-right:20px;">
+
+  <!-- Text -->
+  <div>
+    <h1 style="margin:0;">Shree Radha Krishna Inter College</h1>
+    <p style="margin:5px 0 0;">Official School Website</p>
+  </div>
+
   </header>
 
   <section style="padding:20px;">
