--- a/index.html
+++ b/index.html
@@ -8,18 +8,79 @@
 </head>
 <body style="font-family: Arial, sans-serif; margin:0; padding:0;">
 
-  <header style="background:#0b5ed7; color:white; padding:15px 25px; display:flex; align-items:center;">
+<style>
+.section {
+  background: #ffffff;
+  padding: 30px 40px;
+  margin: 25px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+.section h2 {
+  color: #0b5ed7;
+  border-bottom: 2px solid #0b5ed7;
+  padding-bottom: 8px;
+  margin-bottom: 15px;
+}
+
+.section p {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+}
   
-  <!-- Logo -->
-  <img src="logo.png" alt="School Logo"
-       style="height:70px; width:70px; border-radius:50%; background:white; padding:5px; margin-right:20px;">
+  body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
 
-  <!-- Text -->
+  .header {
+    background: #0b5ed7;
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 12px 30px;
+  }
+
+  .header img {
+    height: 65px;
+    width: 65px;
+    border-radius: 50%;
+    background: white;
+    padding: 5px;
+    margin-right: 20px;
+  }
+
+  .header h1 {
+    margin: 0;
+    font-size: 26px;
+    font-weight: bold;
+  }
+
+  .header p {
+    margin: 4px 0 0;
+    font-size: 14px;
+    letter-spacing: 1px;
+  }
+
+  .section {
+    padding: 25px 40px;
+  }
+
+  .section h2 {
+    color: #0b5ed7;
+  }
+</style>
+  
+  <header> <div class="header">
+  <img src="logo.png" alt="College Logo">
+
   <div>
-    <h1 style="margin:0;">Shree Radha Krishna Inter College</h1>
-    <p style="margin:5px 0 0;">Official School Website</p>
+    <h1>Shree Radha Krishna Inter College</h1>
+    <p>OFFICIAL COLLEGE WEBSITE</p>
   </div>
-
+</div>
   </header>
 
   <section style="padding:20px;">
@@ -30,12 +91,10 @@
     </p>
   </section>
 
-  <section style="padding:20px; background:#f5f5f5;">
-    <h2>About Us</h2>
-    <p>
-      Shree Radha Krishna Inter College is committed to nurturing students
-      with quality education and strong moral foundation.
-    </p>
+  <section> <div class="section">
+  <h2>About Us</h2>
+  <p>Text...</p>
+  </div> 
   </section>
 
   <section style="padding:20px;">
