--- a/index.html
+++ b/index.html
@@ -2,112 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shree Radha Krishna Inter College | Official Website</title>
-  <meta name="description" content="Shree Radha Krishna Inter College official website. Inter college providing quality education in Uttar Pradesh.">
+  <title>Shree Radha Krishna Inter College</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f2f4f7;
+    }
+
+    /* ===== HEADER ===== */
+    .top-header {
+      background: #0b3c91;
+      color: white;
+      display: flex;
+      align-items: center;
+      padding: 15px 40px;
+    }
+
+    .top-header img {
+      height: 70px;
+      width: 70px;
+      border-radius: 50%;
+      background: white;
+      padding: 5px;
+      margin-right: 20px;
+    }
+
+    .top-header h1 {
+      margin: 0;
+      font-size: 26px;
+      font-weight: bold;
+    }
+
+    .top-header p {
+      margin: 4px 0 0;
+      font-size: 14px;
+      letter-spacing: 1px;
+    }
+
+    /* ===== SECTION BOX ===== */
+    .section {
+      background: white;
+      margin: 30px auto;
+      padding: 30px 40px;
+      max-width: 1100px;
+      border-radius: 6px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    .section h2 {
+      color: #0b3c91;
+      border-bottom: 2px solid #0b3c91;
+      padding-bottom: 8px;
+    }
+
+    .section p {
+      font-size: 16px;
+      line-height: 1.7;
+      color: #333;
+    }
+
+    /* ===== FOOTER ===== */
+    .footer {
+      background: #0b3c91;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; margin:0; padding:0;">
 
-<style>
-.section {
-  background: #ffffff;
-  padding: 30px 40px;
-  margin: 25px;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-}
+<body>
 
-.section h2 {
-  color: #0b5ed7;
-  border-bottom: 2px solid #0b5ed7;
-  padding-bottom: 8px;
-  margin-bottom: 15px;
-}
-
-.section p {
-  font-size: 16px;
-  line-height: 1.6;
-  color: #333;
-}
-  
-  body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-
-  .header {
-    background: #0b5ed7;
-    color: white;
-    display: flex;
-    align-items: center;
-    padding: 12px 30px;
-  }
-
-  .header img {
-    height: 65px;
-    width: 65px;
-    border-radius: 50%;
-    background: white;
-    padding: 5px;
-    margin-right: 20px;
-  }
-
-  .header h1 {
-    margin: 0;
-    font-size: 26px;
-    font-weight: bold;
-  }
-
-  .header p {
-    margin: 4px 0 0;
-    font-size: 14px;
-    letter-spacing: 1px;
-  }
-
-  .section {
-    padding: 25px 40px;
-  }
-
-  .section h2 {
-    color: #0b5ed7;
-  }
-</style>
-  
-  <header> <div class="header">
-  <img src="logo.png" alt="College Logo">
-
-  <div>
-    <h1>Shree Radha Krishna Inter College</h1>
-    <p>OFFICIAL COLLEGE WEBSITE</p>
+  <!-- HEADER -->
+  <div class="top-header">
+    <img src="logo.png" alt="School Logo">
+    <div>
+      <h1>Shree Radha Krishna Inter College</h1>
+      <p>OFFICIAL SCHOOL WEBSITE</p>
+    </div>
   </div>
-</div>
-  </header>
 
-  <section style="padding:20px;">
+  <!-- WELCOME -->
+  <div class="section">
     <h2>Welcome</h2>
     <p>
       Welcome to Shree Radha Krishna Inter College.  
-      Our institution is dedicated to academic excellence, discipline, and values.
+      Our institution is dedicated to academic excellence, discipline,
+      and overall development of students.
     </p>
-  </section>
+  </div>
 
-  <section> <div class="section">
-  <h2>About Us</h2>
-  <p>Text...</p>
-  </div> 
-  </section>
+  <!-- ABOUT -->
+  <div class="section">
+    <h2>About Our School</h2>
+    <p>
+      Shree Radha Krishna Inter College is a reputed educational institution
+      committed to providing quality education and strong moral values.
+      Our aim is to shape responsible and successful citizens.
+    </p>
+  </div>
 
-  <section style="padding:20px;">
-    <h2>Contact Us</h2>
-    <p><b>Address:</b> Uttar Pradesh, India</p>
-    <p><b>Phone:</b> XXXXXXXX</p>
-    <p><b>Email:</b> example@email.com</p>
-  </section>
+  <!-- CONTACT -->
+  <div class="section">
+    <h2>Contact Information</h2>
+    <p>
+      <b>Address:</b> Uttar Pradesh, India <br><br>
+      <b>Phone:</b> XXXXXXXXXX <br><br>
+      <b>Email:</b> school@email.com
+    </p>
+  </div>
 
-  <footer style="background:#222; color:white; text-align:center; padding:10px;">
-    <p>© 2026 Shree Radha Krishna Inter College</p>
-    <p>Website developed by Ex-Student</p>
-  </footer>
+  <!-- FOOTER -->
+  <div class="footer">
+    © 2026 Shree Radha Krishna Inter College | All Rights Reserved
+  </div>
 
 </body>
 </html>
